Ensure box-sizing:border-box for .hljs to prevent width:100% from causing overflow

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 	overflow: auto;
 }
 
+.hljs {
+	box-sizing: border-box;
+}
+
 .hljs.shcb-code-table {
 	display: table;
 	width: 100%;
